<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/toolbar_profile"/>

    <ImageView
        android:layout_marginTop="50dp"
        android:src="@drawable/group_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.AppCompatTextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/white"
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/need_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/white"
        android:text="@string/need_to_login_desc"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/loginRegisterButton"
        android:textAllCaps="false"
        android:theme="@style/Login_button_style"
        android:text="@string/login_register"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="250dp"
        android:layout_height="55dp" />


    </LinearLayout>

</RelativeLayout>